add styling to intro window for game

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,4 +24,48 @@ score h2{
 
 score p {
     text-align: center;
+    padding : 20px;
+    font-size: 25px;
+}
+
+.intro{
+    color:#2F32C4;
+    height: auto;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.intro h1 {
+    font-size: 50px;
+}
+
+score p{
+    text-align: center;
+    padding: 10px;
+    font-size: 25px;
+}
+
+.intro{
+    color:#2f32c4;
+    height: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.intro h1{
+    font-size: 25%;
+}
+
+.intro button{
+    width: 100px;
+    height: 0px;
+    background: none;
+    border: none;
+    color: #FFE79D;
+    font-size: 20px;
+    background:#2F32C4
 }
