--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,24 +5,24 @@
 }
 
 section {
-    height: 100%;
+    height: 100vh;
     background-color: #FFE79D;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .score {
     color: #2F32C4;
-    height: 20%;
+    height: 20vh;
     display: flex;
     justify-content: space-around;
     align-items: center;
 }
 
-score h2{
+.score h2{
     font-size: 30px;
 }
 
-score p {
+.score p {
     text-align: center;
     padding : 20px;
     font-size: 25px;
@@ -41,7 +41,7 @@ score p {
     font-size: 50px;
 }
 
-score p{
+.score p {
     text-align: center;
     padding: 10px;
     font-size: 25px;
@@ -49,23 +49,51 @@ score p{
 
 .intro{
     color:#2f32c4;
-    height: 50%;
+    height: 50vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+    opacity: 0;
 }
 
 .intro h1{
-    font-size: 25%;
+    font-size: 50px;
 }
 
-.intro button{
+.intro button,
+.match button{
     width: 100px;
-    height: 0px;
+    height: 50px;
     background: none;
     border: none;
     color: #FFE79D;
     font-size: 20px;
-    background:#2F32C4
+    background:#2F32C4;
+    cursor: pointer;
 }
+
+.match{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform:translate(-50%, -50%)
+}
+
+.winner{
+    color: #2F32C4;
+    text-align: center;    
+    font-size: 50px;
+}
+
+.hands,
+.options {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.player-hand{
+    transform: rotateY(180deg);
+}
+
