--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,3 +97,12 @@ section {
     transform: rotateY(180deg);
 }
 
+div.fadeOut {
+    opacity: 0;
+    pointer-events: none;
+}
+
+div.fadeIn{
+    opacity: 1;
+    pointer-events: all;
+}
