--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,11 +42,24 @@ header > h1{
     font-size: 25px;
 }
 
-.badge{
+.scorenames{
     background-color: red;
     color: white;  
     font-size: 10px;
     padding: 3px 9px;
+    top: 30px;
+}
+
+#playeridentfier{
+    position: absolute;
+    top: 30px;
+    left: -55px;
+}
+
+#computeridentfier{
+    position: absolute;
+    top: 30px;
+    right: -100px;
 }
 
 #intro{
@@ -103,6 +116,7 @@ header > h1{
 
 #match{
     transform: translate(20px, -615px);
+    opacity: 0;
 }
 
 #winner{
