--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,7 +111,7 @@ header>h1 {
     visibility: hidden;
 }
 
-#results {
+.results {
     text-align: center;
     font-size: 250%;
     color: #2f32c4;
