--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,11 +100,10 @@ header>h1 {
 }
 
 #match {
-    transform: translate(0%, -102%);
     opacity: 0;
     transition: opacity 1s;
     visibility: hidden;
-    height:30vh
+
 }
 
 #match.fadeIn {
@@ -135,19 +134,16 @@ header>h1 {
     height: 30vh;
 }
 
-#hands{
-    height: 20vh;
-}
 
 #player-hand {
-    top:15%;
-    left:23%;
+    top:18%;
+    left:33%;
     position: absolute;
 }
 
 #computer-hand{
-    top: 15%;
-    right:30%;
+    top: 18%;
+    right: 33%;
     position:absolute;
 }
 
@@ -159,8 +155,6 @@ div.fadeOut {
 .options {
     display: flex;
     justify-content: space-evenly;
-    top: 20%;
-    transform: 0%,-100%;
 }
 
 #reset{
@@ -174,4 +168,63 @@ div.fadeOut {
     color: white;
     position: sticky;
     bottom: 0;
+}
+
+@media only screen and (min-width: 320px) and (max-width: 479px) {
+    .scoreboard{
+        flex-direction: column;
+        height: auto;
+    }
+
+    #score p {
+        padding: 5px;
+        font-size: 20px;
+    }
+
+    #score h2{
+        font-size: 135%;
+    }
+
+    #playeridentfier {
+        left: -70%;
+        top:1px;
+    }
+    
+    #computeridentfier {
+        right:73%;
+        top:34px;
+    }
+
+    #computerscore{
+        right:1%;
+    }
+
+    #player-hand{
+        top:30%;
+        left:10%;
+    }
+    #computer-hand{
+        top:30%;
+        left:60%;
+    }
+
+    #winner{
+        text-align: unset;
+        font-size: 219%;
+    }
+    .button img{
+        width: 75%;
+        height: auto;
+    }
+    #hands img{
+        width: 23%;
+        height: auto;
+    }
+    #intro {
+        height: 22vh;
+    }
+    .results{
+        font-size: 157%;
+        margin-top: 1%;
+    }
 }
