added a pop out window for rules of the game

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,13 +57,13 @@ header>h1 {
 #playeridentfier {
     position: absolute;
     top: 5px;
-    left: -55px;
+    left: 5px;
 }
 
 #computeridentfier {
     position: absolute;
     top: 5px;
-    right: -100px;
+    right: 5px;
 }
 
 #intro {
@@ -124,6 +124,7 @@ header>h1 {
     color: #2F32C4;
     text-align: center;
     font-size: 330%;
+    padding-bottom: 15%;
 }
 
 #options {
@@ -170,6 +171,52 @@ div.fadeOut {
     bottom: 0;
 }
 
+.model-bg{
+    position: fixed;
+    width: 100%;
+    height:100vh;
+    top: 0;
+    left: 0;
+    background-color: rgba(0,0,0,0.25);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    visibility: hidden;
+    opacity: 0;
+    transition: visablity 1s, opacity 0.3s;
+}
+
+.bg-active{
+    visibility: visible;
+    opacity: 1;
+}
+
+.modal{
+    background-color: white;
+    width: 30%;
+    height: 30%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
+    
+}
+
+.modal button{
+    width: 100px;
+    height: 50px;
+    background: none;
+    border: none;
+    color: #FFE79D;
+    font-size: 20px;
+    background: #2F32C4;
+    cursor: pointer;
+}
+.model-btn{
+    position: relative;
+    top: -1%;
+    right: -1%
+}
 @media only screen and (min-width: 320px) and (max-width: 479px) {
     .scoreboard{
         flex-direction: column;
