--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,7 +124,7 @@ header>h1 {
     color: #2F32C4;
     text-align: center;
     font-size: 330%;
-    padding-bottom: 15%;
+    padding-bottom: 5%;
 }
 
 #options {
@@ -137,13 +137,13 @@ header>h1 {
 
 
 #player-hand {
-    top:18%;
+    top:22%;
     left:33%;
     position: absolute;
 }
 
 #computer-hand{
-    top: 18%;
+    top: 23%;
     right: 33%;
     position:absolute;
 }
@@ -163,15 +163,7 @@ div.fadeOut {
     position: relative;
 }
 
-#rules{
-    text-align: center;
-    background-color: #252525;
-    color: white;
-    position: sticky;
-    bottom: 0;
-}
-
-.model-bg{
+.rules-bg{
     position: fixed;
     width: 100%;
     height:100vh;
@@ -191,7 +183,7 @@ div.fadeOut {
     opacity: 1;
 }
 
-.modal{
+.rules{
     background-color: white;
     width: 30%;
     height: 30%;
@@ -202,7 +194,7 @@ div.fadeOut {
     
 }
 
-.modal button{
+.rules div{
     width: 100px;
     height: 50px;
     background: none;
@@ -212,10 +204,10 @@ div.fadeOut {
     background: #2F32C4;
     cursor: pointer;
 }
-.model-btn{
+.rules-btn{
     position: relative;
     top: -1%;
-    right: -1%
+    left:90%;
 }
 @media only screen and (min-width: 320px) and (max-width: 479px) {
     .scoreboard{
@@ -247,11 +239,11 @@ div.fadeOut {
     }
 
     #player-hand{
-        top:30%;
+        top:25%;
         left:10%;
     }
     #computer-hand{
-        top:30%;
+        top:25%;
         left:60%;
     }
 
@@ -273,5 +265,8 @@ div.fadeOut {
     .results{
         font-size: 157%;
         margin-top: 1%;
+    }
+    .rules-btn{
+        left: 73%;
     }
 }
