--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,11 @@
     border: 0;
 }
 
+html{
+    width: 100%;
+    overflow: hidden;
+}
+
 body {
     background-color: #FFE79D;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -16,12 +21,14 @@ header {
     padding: 20px;
     background: #252525;
     color: white;
+    max-width: 100vw;
+    overflow: hidden;
 }
 
 
 header>h1 {
     text-align: center;
-
+    
 }
 
 #score {
@@ -143,12 +150,14 @@ header>h1 {
     top: 22%;
     left: 33%;
     position: absolute;
+    z-index: -1;
 }
 
 #computer-hand {
     top: 23%;
     right: 33%;
     position: absolute;
+    z-index: -1;
 }
 
 div.fadeOut {
@@ -183,13 +192,13 @@ div.fadeOut {
 
 .rules {
     background-color: white;
-    width: 30%;
+    min-width: 50vw;
     height: 30%;
     display: flex;
     justify-content: space-around;
     align-items: center;
     flex-direction: column;
-
+    z-index: 1;
 }
 
 .rules div {
@@ -202,6 +211,8 @@ div.fadeOut {
     background: #2F32C4;
     cursor: pointer;
 }
+
+
 
 .rules-btn {
     display: flex;
@@ -261,7 +272,7 @@ div.fadeOut {
     }
 
     #hands img {
-        width: 23%;
+        width: 35%;
         height: auto;
     }
 
