--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
+/*base css affecting the wholepage*/
+
 * {
     margin: 0;
     padding: 0;
@@ -30,7 +32,7 @@ header>h1 {
     text-align: center;
     
 }
-
+/*score and scoreboard css*/
 #score {
     margin: 1% auto;
     border: 2px dashed white;
@@ -76,7 +78,7 @@ header>h1 {
     right: 5px;
     z-index: -1;
 }
-
+/* introductry screen */
 #intro {
     display: flex;
     flex-direction: column;
@@ -97,8 +99,6 @@ header>h1 {
     font-size: 50px;
 }
 
-
-
 #intro button {
     background: none;
     border: none;
@@ -107,7 +107,7 @@ header>h1 {
     cursor: pointer;
     font-weight: bold;
 }
-
+/* match to fade in and be playable*/
 #match {
     opacity: 0;
     transition: opacity 1s;
@@ -169,7 +169,7 @@ div.fadeOut {
     display: flex;
     justify-content: space-evenly;
 }
-
+/*modal css*/
 .rules-bg {
     position: fixed;
     width: 100%;
@@ -218,7 +218,7 @@ div.fadeOut {
     justify-content: end;
     padding: 4px 120px;
 }
-
+/*media quaries for moblie*/
 @media only screen and (min-width: 320px) and (max-width: 479px) {
 
     .scoreboard {
@@ -287,7 +287,7 @@ div.fadeOut {
         left: 73%;
     }
 }
-
+/*media quaries for tablet*/
 @media all and (min-width: 480px) and (max-width: 768px) {
     .scoreboard {
         flex-direction: column;
@@ -356,7 +356,7 @@ div.fadeOut {
     } 
 
 }
-
+/*media quaries for larger tablets*/
 @media all and (min-width: 768px) and (max-width: 1024px) {
 
     .scoreboard {
@@ -426,6 +426,7 @@ div.fadeOut {
     } 
 
  }
+ /*media quaries for laptops*/
  @media all and (min-width: 1024px) and (max-width: 1280px) { 
 
     .scoreboard {
@@ -494,3 +495,5 @@ div.fadeOut {
     } 
 
  }
+
+ /*end of css*/
